--- a/nx-react/tsconfig.base.json
+++ b/nx-react/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@nx-react/sing-react-ui": ["libs/sing-react-ui/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
