--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "workspaces": [
+    "nx-react"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "nx-react:start": "npm run start --workspace=nx-react"
   },
   "repository": {
     "type": "git",
