--- a/nx-react/package.json
+++ b/nx-react/package.json
@@ -10,10 +10,13 @@
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
+    "primeicons": "^5.0.0",
+    "primereact": "^7.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "@nrwl/cli": "13.9.3",
