--- a/nx-react/package.json
+++ b/nx-react/package.json
@@ -9,14 +9,17 @@
   },
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.1",
     "core-js": "^3.6.5",
     "primeicons": "^5.0.0",
     "primereact": "^7.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.1",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0",
-    "react-transition-group": "^4.4.1"
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@nrwl/cli": "13.9.3",
